# astroball

./: .gitignore  README.md  pyproject.toml  team_generator.py
team_balancer/: predict_outcome_graph.py  team_balancer.py
